--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -26,7 +26,7 @@
       flex-direction: column;
       align-items: flex-start;
       gap: 12px;
-      padding: 12px 20px;
+      padding: 10px 20px;
     }
   
     .nav-buttons {
@@ -52,7 +52,21 @@
     }
   
     .logo {
-      font-size: 1rem;
+      font-size: 1.2rem;
+    }
+    .difficulty-options{
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+
+    .duration-card, .difficulty-card {
+      width: 350px;
+      height: 170px;
+    }
+
+    .title{
+      font-size: 2rem;
     }
   }
   
