--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -196,7 +196,7 @@ body.dark #languageToggle {
 }
 
 /* ================== LIGNE DE SÉPARATION SOUS LE TITRE ================== */
-.divider {
+.divider-container {
   width: 100px;
   height: 3px;
   background-color: var(--primary-orange);
@@ -806,4 +806,169 @@ body.dark #languageToggle {
     opacity: 1;
     transform: scale(1);
   }
+}
+
+
+/* ======== LOGIN STYLE ========= */
+
+.login-page{
+  width: 100%;
+  height: 100vh;
+  align-items: center;
+  justify-content: center;
+}
+.container-login{
+  display: flex;
+  flex-direction: row;
+  margin: 90px auto;
+  width: 900px;
+  max-width: 100%;
+  background: #fff;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.485);
+  border-radius: 12px;
+  overflow: hidden;
+}
+
+.left {
+  flex: 1;
+  background: url('../image/bg-left.jpg'), center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 30px;
+}
+
+.right {
+  flex: 1;
+  padding: 40px;
+  position: relative;
+}
+
+.right h2 {
+  font-size: 28px;
+  font-weight: 700;
+  margin-bottom: 30px;
+  color: #1f1f1f;
+}
+
+label {
+  font-size: 1rem;
+  font-weight: 600;
+  color: var(--color-black);
+  margin-top: 20px;
+  display: block;
+}
+
+input:-webkit-autofill {
+  background-color: transparent !important;
+  -webkit-box-shadow: 0 0 0px 1000px white inset !important;
+  -webkit-text-fill-color: black !important;
+}
+
+.input-box {
+  display: flex;
+  align-items: center;
+  border: 2px solid var(--secondary-color);
+  border-radius: 6px;
+  margin-top: 5px;
+  padding: 8px 12px;
+}
+
+.input-box input {
+  border: none;
+  outline: none;
+  flex: 1;
+}
+
+.forgot {
+  display: block;
+  text-align: right;
+  margin-top: 10px;
+  font-size: 1rem;
+  color: var(--color-black);
+  text-decoration: none;
+}
+
+.login-btn {
+  width: 100%;
+  padding: 12px;
+  background-color: var(--primary);
+  color: white;
+  border: none;
+  border-radius: 6px;
+  font-size: 16px;
+  font-weight: bold;
+  margin-top: 20px;
+  cursor: pointer;
+  transition: background 0.3s ease;
+}
+
+.login-btn:hover {
+  background-color: #ff4c4c;
+}
+
+.divider {
+  text-align: center;
+  margin: 20px 0;
+  position: relative;
+}
+
+.divider span {
+  background: #fff;
+  padding: 0 10px;
+  position: relative;
+  z-index: 1;
+}
+
+.divider::before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 0;
+  height: 1px;
+  width: 100%;
+  background: #ccc;
+  z-index: 0;
+}
+
+.social-icons {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  margin-bottom: 20px;
+}
+
+.social-icons i{
+  font-size: 1.4rem;
+  cursor: pointer;
+  transition: transform 0.2s;
+}
+
+.social-icons i:hover {
+  transform: scale(1.1);
+}
+
+.signup {
+  text-align: center;
+  font-size: 14px;
+}
+
+.signup a {
+  color: #007bff;
+  text-decoration: none;
+}
+
+.input-box i{
+  font-size: 1.5rem;
+  padding-right: 1rem;
+  color: var(--primary-orange);
+}
+
+input::placeholder {
+  color: var(--color-black);
+  font-size: 0.9rem;
+  font-weight: 490 ;
 }
